traefik/traefik-oauth-middleware.yaml
---
#
# Auth Middleware
#
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://127.0.0.1:4181
    authResponseHeaders:
      - X-Forwarded-User
