traefik/whoami-app.yaml
#
# Example Application Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: "0.5"
---
#
# Service
#
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: whoami

---
#
# IngressRoute
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.k8s.dev.linkurious.net`)
    kind: Rule
    services:
      - name: whoami
        port: 80
    middlewares:
      - name: traefik-traefik-forward-auth@kubernetescrd
  tls:
    secretName: wildcard-default-cert
